# data-ghost

./: README.md  docker-compose.yml  start.sh  stop.sh  vercel.json
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .dockerignore  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  run.py  start.sh
backend/data/: sample_users.csv
backend/src/: main.py
backend/src/core/: config.py  logging.py
backend/src/routers/: __init__.py  health.py  query.py  upload.py
backend/src/schemas/: __init__.py  requests.py  responses.py
backend/src/services/: __init__.py  csv_service.py  embedding_service.py  query_service.py
backend/src/storage/: __init__.py  chroma_client.py  file_storage.py
backend/src/utils/: __init__.py  file_utils.py  token_counter.py
backend/tests/unit/: test_csv_service.py
frontend/: package-lock.json  package.json  start.sh  tailwind.config.mjs
frontend/src/api/: client.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AnswerCard.tsx  ChatBox.tsx  ChatMessage.tsx  DarkModeToggle.tsx  ErrorAlert.tsx  Footer.tsx  Header.tsx  Logo.tsx  ThemeProvider.tsx  UploadForm.tsx  UploadSection.tsx
frontend/src/hooks/: useAskQuery.ts
frontend/src/lib/: csv-parser.ts
frontend/src/types/: index.ts
